<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.activities.GameActivity">

    <!-- header -->
    <ImageView
        android:id="@+id/logo_small"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="@id/h03"
        app:layout_constraintBottom_toBottomOf="@id/h10"
        app:layout_constraintStart_toStartOf="@id/v20"
        app:layout_constraintEnd_toEndOf="@id/v80"
        android:contentDescription="@string/app_name" />

    <ImageButton
        android:id="@+id/btn_game_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_back"
        android:onClick="closeActivity"
        app:layout_constraintTop_toTopOf="@id/h03"
        app:layout_constraintBottom_toBottomOf="@id/h10"
        app:layout_constraintStart_toStartOf="@id/v08"
        app:layout_constraintEnd_toEndOf="@id/v20"
        android:background="#ffffffff"
        android:contentDescription="@string/btn_back"
        tools:ignore="OnClick" />

    <!-- board -->
    <GridLayout
        android:id="@+id/board"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/h15"
        app:layout_constraintBottom_toBottomOf="@id/h95"
        app:layout_constraintStart_toStartOf="@id/v08"
        app:layout_constraintEnd_toEndOf="@id/v92"
        android:rowCount="7"
        android:columnCount="9"
        android:useDefaultMargins="true">

    </GridLayout>


    <!-- game over screen -->
    <!-- Logo (and caption) -->
    <ImageView
        android:visibility="gone"
        android:id="@+id/logo_big"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/h25"
        app:layout_constraintEnd_toStartOf="@+id/v90"
        app:layout_constraintStart_toStartOf="@+id/v10"
        app:layout_constraintTop_toTopOf="@+id/h05" />


    <!-- back button -->
    <Button
        android:visibility="gone"
        android:id="@+id/btn_go_back"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/match_btn"
        android:text="@string/btn_back"
        android:onClick="closeActivity"
        app:layout_constraintEnd_toEndOf="@id/v50"
        app:layout_constraintStart_toStartOf="@id/v33"
        app:layout_constraintBottom_toBottomOf="@id/h85"
        app:layout_constraintTop_toTopOf="@id/hi75" />

    <TextView
        android:visibility="gone"
        android:id="@+id/gameOver"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        style="@style/TextAppearance.AppCompat.Title"
        android:text="@string/gameOver_win"
        app:layout_constraintTop_toBottomOf="@id/hi25"
        app:layout_constraintBottom_toBottomOf="@id/hi50"
        app:layout_constraintStart_toEndOf="@id/v10"
        app:layout_constraintEnd_toEndOf="@id/v90"
        />



    <!-- responsive design guidelines -->
    <!--
        The guidelines follow this scheme:
        - @+id/xy - where x represents the orientation and y represents the percentage.
        - @+id/hy - represents horizontal guidelines
        - @+id/hiy - represents inner horizontal guidelines: The section between logo and bottom
        is split percentage based.
        - @id/vy - represents vertical guidelines

    -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hi25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hi50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hi75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".70" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".85" />
    <!-- end responsive design guidelines -->
<!-- responsive layout limits -->
    <!-- horizontals -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".03" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".10" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".15" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".95" />
    <!-- verticals -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".08" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".20" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".80" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v92"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".92" />
</androidx.constraintlayout.widget.ConstraintLayout>